--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       h2{text-align: center;}
       p{text-align: center; color: white;}
       form{text-align: center;}
-      div{background-color: black; color: white;}
+      div{background-color:grey; color: white;}
       .card-body:hover{background-color: black; color: white;}
       .card-body{background-color:white ; color: black; align-items: center;}
       #cr7{text-align: center;}
